@@ -192,3 +192,6 @@ Fixes for buffer filling.
 
 Gisle Vanem
 Fixes for Windows compilation under MingW/gcc.
+
+Scott Weitzenkamp
+Patches to enable demo mode in the UDP_STREAM test
